Overflow hidden to avoid scrollbar

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -49,6 +49,7 @@ body, html {
 }
 
 iframe{
+  overflow: hidden;
   position: fixed;
   height: 100%;
   width: 100%;
